--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wesley's Portfolio</title>
   <link rel="icon" type="image/x-icon" href="img/PortfolioIcon.ico"/>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/pervasive.css"/>
+  <link rel="stylesheet" href="css/main.css"/>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
       <hgroup>
         <h3>Games</h3>
         <p>
-          <a href="javascript:alert('Currently under construction, sorry!');">Rules, Rules, Rules</a> - Independent Project<br />
+          <a href="./rules-rules-rules.html">Rules, Rules, Rules</a> - Independent Project<br />
           <a href="https://undalevein.github.io/FromRedToBlueToDarkness/" target="_blank">From Red, to Blue, to Darkness</a> - Independent Project<br />
           <a href="https://soko-ball.web.app/" target="_blank">Sokoball</a> - Programming, Art, and Game Logic<br />
           <a href="https://github.com/Undalevein/Poker-Face" target="_blank">Poker Face</a> - <abbr title="Graphical User Interface">GUI</abbr> and Game Logic Scripting<br />
