--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h2>Hello, I am a video game programmer. I also do other projects! Here are some of the projects I have made below.</h2>
   </header>
 
+  <div class="body-container"></div>
   <div class="project-container">
     <section>
       <hgroup>
@@ -48,7 +49,7 @@
       <hgroup>
         <h3>Speedrunning</h3>
         <p>
-          <a href="https://undalevein.github.io/Funktion/" target="_blank">Escape Simulator AutoSplitters</a> - Both <abbr title="Escape Simulator">ES1</abbr> and <abbr title="Escape Simulator 2">ES2</abbr><br />
+          <a href="https://github.com/Undalevein/EscapeSimulatorAutosplitter" target="_blank">Escape Simulator AutoSplitters</a> - Both <abbr title="Escape Simulator">ES1</abbr> and <abbr title="Escape Simulator 2">ES2</abbr><br />
           <a href="https://github.com/Undalevein/witness-tas-scripts" target="_blank">The Witness <abbr title="Tool Assisted Speedrun">TAS</abbr> Scripts</a> - Not fully completed due to hardware dependencies<br />
           <a href="https://github.com/Undalevein/Blue-Prince-Parlor-Puzzle-Practice" target="_blank">Blue Prince Parlor Simulator</a> - Memorizing the Puzzles for <i>Blue Prince</i> Speedruns<br />
         </p>
@@ -59,12 +60,15 @@
 
 <footer>
   <address>
-    <p>
-      Contacts <br />
-      <a href="mailto:wesleyng2003@yahoo.com">wesleyng2003@yahoo.com</a><br/>
-      <a href="https://github.com/Undalevein" target="_blank">https://github.com/Undalevein</a><br/>
-      <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">https://www.linkedin.com/in/wesleyng1489/</a>
-    </p>
+    <a class="mail-button" href="mailto:wesleyng2003@yahoo.com">
+      <div role="img" aria-label="Personal Mailing Action" class="mail-link"></div>
+    </a>
+    <a href="https://github.com/Undalevein" target="_blank">
+      <img class="github-logo" src="img/github-mark.png" width="60" height="60" alt="GitHub Profile Link"/>
+    </a>
+    <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">
+      <img class="linkedin-logo" src="img/LI-In-Bug.png" alt="LinkedIn Profile Link" />
+    </a>
   </address>
 </footer>
 </html>
