--- a/rules-rules-rules.html
+++ b/rules-rules-rules.html
@@ -42,12 +42,20 @@
         <p>
           Shuffle the decks of the Slap Cards, Positive, Negative, and Forbidden Cards. Separate the Slap Cards as equally as possible to all players who are playing
         </p>
-        <h4>How to play</h4>
+        <h4 id="how-to-play">How to play</h4>
         <p>
-          Upon starting a brand new game, start by drawing a Forbidden Card and face it upwards for everyone to read. This drawn card should be facing up for the entire game.<br />
-          Each player playing will be responsible for their own stacks when revealing Slap Cards, where they will be revealing their cards onto.<br />
-          To start a new round, reveal 2 Positive Cards and 1 Negative Card and have them face up for everyone to read.<br />
-          After everyone has read the Rule Cards, all players take a Slap Card from their deck but do no reveal it. Hold the cards at the center such that everyone could slap. Countdown by saying "3... 2... 1... GO!" where upon shouting "GO!" all players reveal their cards facing up onto their stack. Once everyone revealed their cards, players can slap any of the cards that was revealed.<br />
+          Upon starting a brand new game, start by drawing a Forbidden Card and face it upwards for everyone to read. This drawn card should be facing up for the entire game.
+        </p>
+        <p>
+          Each player playing will be responsible for their own stacks when revealing Slap Cards, where they will be revealing their cards onto.
+        </p>
+        <p>
+          To start a new round, reveal 2 Positive Cards and 1 Negative Card and have them face up for everyone to read.
+        </p>
+        <p>
+          After everyone has read the Rule Cards, all players take a Slap Card from their deck but do no reveal it. Hold the cards at the center such that everyone could slap. Countdown by saying "3... 2... 1... GO!" where upon shouting "GO!" all players reveal their cards facing up onto their stack. Once everyone revealed their cards, players can slap any of the cards that was revealed.
+        </p>
+        <p>
           If the first player slaps any of the cards, they should be rewarded/punished by referring to the Slap Rules table below. If there is a tie, whoever has their hand covering most of the card gets rewarded/punished.
         </p>
         <table>
@@ -91,21 +99,24 @@
       <hgroup>
         <h3>Obedience is Everything</h3>
         <p>
-          <i>Under Construction!!! Sorry!</i>
+          <i>Rules, Rules, Rules</i> is a rules-based party card game where you must follow the rules or get punished! You
         </p>
       </hgroup>
     </main>
   </div>
 </body>
-
+  
 <footer>
   <address>
-    <p>
-      Contacts <br />
-      <a href="mailto:wesleyng2003@yahoo.com">wesleyng2003@yahoo.com</a><br/>
-      <a href="https://github.com/Undalevein" target="_blank">https://github.com/Undalevein</a><br/>
-      <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">https://www.linkedin.com/in/wesleyng1489/</a>
-    </p>
+    <a class="mail-button" href="mailto:wesleyng2003@yahoo.com">
+      <div role="img" aria-label="Personal Mailing Action" class="mail-link"></div>
+    </a>
+    <a href="https://github.com/Undalevein" target="_blank">
+      <img class="github-logo" src="img/github-mark.png" width="60" height="60" alt="GitHub Profile Link"/>
+    </a>
+    <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">
+      <img class="linkedin-logo" src="img/LI-In-Bug.png" alt="LinkedIn Profile Link" />
+    </a>
   </address>
 </footer>
 </html>
