--- a/rules-rules-rules.html
+++ b/rules-rules-rules.html
@@ -117,6 +117,9 @@
     <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">
       <img class="linkedin-logo" src="img/LI-In-Bug.png" alt="LinkedIn Profile Link" />
     </a>
+    <a class="resume-button" href="file:file/Resume_WN.pdf" target="_blank">
+      <div role="img" aria-label="Personal Resume" class="resume-link"></div>
+    </a>
   </address>
 </footer>
 </html>
