Completed more things

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8"/>
   <meta application-name="Portfolio - Wesley Ng"/>
@@ -15,63 +15,69 @@
 
 <body>
   <header>
-    <h1>Wesley Ng</h1>
-    <h2>Hello, I am a video game programmer. I also do other projects! Here are some of the projects I have made below.</h2>
+    <hgroup>
+      <h1>Wesley Ng</h1>
+      <h2>
+        Hello, I am a video game programmer.
+        I also do other projects!
+        Here are some of the projects I have made below.
+      </h2>
+    </hgroup>
   </header>
 
-  <div class="body-container"></div>
-  <div class="project-container">
-    <section>
-      <hgroup>
-        <h3>Games</h3>
-        <p>
-          <a href="./rules-rules-rules.html">Rules, Rules, Rules</a> - Independent Project<br />
-          <a href="https://undalevein.github.io/FromRedToBlueToDarkness/" target="_blank">From Red, to Blue, to Darkness</a> - Independent Project<br />
-          <a href="https://soko-ball.web.app/" target="_blank">Sokoball</a> - Programming, Art, and Game Logic<br />
-          <a href="https://github.com/Undalevein/Poker-Face" target="_blank">Poker Face</a> - <abbr title="Graphical User Interface">GUI</abbr> and Game Logic Scripting<br />
-          <a href="https://undalevein.itch.io/eye-spy" target="_blank">Eye Spy?</a> - Programming Lead (LMU Game Jam Fall 2025)<br />
-          <a href="https://boastful-birdie.itch.io/game-jam-the-nut-case" target="_blank">The Nutcase</a> - Puzzle Design (LMU Game Jam Fall 2024)<br />
-          <a href="https://siegesg.itch.io/tax-invasion" target="_blank">Tax Invasion</a> - Art Lead (LMU Game Jam Spring 2024)<br />
-        </p>
-      </hgroup>
-    </section>
-    <section>
-      <hgroup>
-        <h3>Programming Languages</h3>
-        <p>
-          <a href="https://github.com/rtoal/ple" target="_blank">Programming Language Explorations (PLE)</a> - PLang Research led by <abbr title="Loyola Marymount University">LMU</abbr> Professor Ray Toal<br />
-          <a href="https://undalevein.github.io/Funktion/" target="_blank">Funktion</a> - Parametric-inspired PLang<br />
-          <a href="https://esolangs.org/wiki/Timeline" target="_blank">Timeline</a> - 3D Esoteric PLang<br />
-        </p>
-      </hgroup>
-    </section>
-    <section>
-      <hgroup>
-        <h3>Speedrunning</h3>
-        <p>
-          <a href="https://github.com/Undalevein/EscapeSimulatorAutosplitter" target="_blank">Escape Simulator AutoSplitters</a> - Both <abbr title="Escape Simulator">ES1</abbr> and <abbr title="Escape Simulator 2">ES2</abbr><br />
-          <a href="https://github.com/Undalevein/witness-tas-scripts" target="_blank">The Witness <abbr title="Tool Assisted Speedrun">TAS</abbr> Scripts</a> - Not fully completed due to hardware dependencies<br />
-          <a href="https://github.com/Undalevein/Blue-Prince-Parlor-Puzzle-Practice" target="_blank">Blue Prince Parlor Simulator</a> - Memorizing the Puzzles for <i>Blue Prince</i> Speedruns<br />
-        </p>
-      </hgroup>
-    </section>
+  <div class="body-container">
+    <div class="project-container">
+      <section>
+        <hgroup>
+          <h3>Games</h3>
+          <p>
+            <a href="./rules-rules-rules.html">Rules, Rules, Rules</a> - Independent Project<br />
+            <a href="https://undalevein.github.io/FromRedToBlueToDarkness/" target="_blank">From Red, to Blue, to Darkness</a> - Independent Project<br />
+            <a href="https://soko-ball.web.app/" target="_blank">Sokoball</a> - Programming, Art, and Game Logic<br />
+            <a href="https://github.com/Undalevein/Poker-Face" target="_blank">Poker Face</a> - <abbr title="Graphical User Interface">GUI</abbr> and Game Logic Scripting<br />
+            <a href="https://undalevein.itch.io/eye-spy" target="_blank">Eye Spy?</a> - Programming Lead (LMU Game Jam Fall 2025)<br />
+            <a href="https://boastful-birdie.itch.io/game-jam-the-nut-case" target="_blank">The Nutcase</a> - Puzzle Design (LMU Game Jam Fall 2024)<br />
+            <a href="https://siegesg.itch.io/tax-invasion" target="_blank">Tax Invasion</a> - Art Lead (LMU Game Jam Spring 2024)<br />
+          </p>
+        </hgroup>
+      </section>
+      <section>
+        <hgroup>
+          <h3>Programming Languages</h3>
+          <p>
+            <a href="https://github.com/rtoal/ple" target="_blank">Programming Language Explorations (PLE)</a> - PLang Research led by <abbr title="Loyola Marymount University">LMU</abbr> Professor Ray Toal<br />
+            <a href="https://undalevein.github.io/Funktion/" target="_blank">Funktion</a> - Parametric-inspired PLang<br />
+            <a href="https://esolangs.org/wiki/Timeline" target="_blank">Timeline</a> - 3D Esoteric PLang<br />
+          </p>
+        </hgroup>
+      </section>
+      <section>
+        <hgroup>
+          <h3>Speedrunning</h3>
+          <p>
+            <a href="https://github.com/Undalevein/EscapeSimulatorAutosplitter" target="_blank">Escape Simulator AutoSplitters</a> - Both <abbr title="Escape Simulator">ES1</abbr> and <abbr title="Escape Simulator 2">ES2</abbr><br />
+            <a href="https://github.com/Undalevein/witness-tas-scripts" target="_blank">The Witness <abbr title="Tool Assisted Speedrun">TAS</abbr> Scripts</a> - Not fully completed due to hardware dependencies<br />
+            <a href="https://github.com/Undalevein/Blue-Prince-Parlor-Puzzle-Practice" target="_blank">Blue Prince Parlor Simulator</a> - Memorizing the Puzzles for <i>Blue Prince</i> Speedruns<br />
+          </p>
+        </hgroup>
+      </section>
+    </div>
+    <footer>
+      <address>
+        <a class="mail-button" href="mailto:wesleyng2003@yahoo.com">
+          <div role="img" title="Send me and email!" aria-label="Personal Mailing Action" class="mail-link"></div>
+        </a>
+        <a href="https://github.com/Undalevein" target="_blank">
+          <img class="github-logo" title="Check out my projects on GitHub!" src="img/github-mark.png" width="60" height="60" alt="GitHub Profile Link"/>
+        </a>
+        <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">
+          <img class="linkedin-logo" title="My LinkedIn Profile!" src="img/LI-In-Bug.png" alt="LinkedIn Profile Link" />
+        </a>
+        <a class="resume-button" href="file:file/Resume_WN.pdf" target="_blank">
+          <div role="img" title="My resume!" aria-label="Personal Resume" class="resume-link"></div>
+        </a>
+      </address>
+    </footer>
   </div>
 </body>
-
-<footer>
-  <address>
-    <a class="mail-button" href="mailto:wesleyng2003@yahoo.com">
-      <div role="img" aria-label="Personal Mailing Action" class="mail-link"></div>
-    </a>
-    <a href="https://github.com/Undalevein" target="_blank">
-      <img class="github-logo" src="img/github-mark.png" width="60" height="60" alt="GitHub Profile Link"/>
-    </a>
-    <a href="https://www.linkedin.com/in/wesleyng1489/" target="_blank">
-      <img class="linkedin-logo" src="img/LI-In-Bug.png" alt="LinkedIn Profile Link" />
-    </a>
-    <a class="resume-button" href="file:file/Resume_WN.pdf" target="_blank">
-      <div role="img" aria-label="Personal Resume" class="resume-link"></div>
-    </a>
-  </address>
-</footer>
 </html>
