--- a/rules-rules-rules.html
+++ b/rules-rules-rules.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8"/>
   <meta application-name="Rules, Rules, Rules"/>
@@ -20,89 +20,91 @@
     <h2>A party game for obedient families and friends.</h2>
   </header>
 
-  <div class="content">
-    <section>
-      <hgroup>
-        <h3>Rules</h3>
-        <h4>Info</h4>
-        <p>
-          Player Count: 3-8 players<br />
-          Items:
-          <ul>
-            <li>Slap Cards</li>
-            <li>Rule Cards</li>
+  <div class="body-container">
+    <div class="content">
+      <section>
+        <hgroup>
+          <h3>Rules</h3>
+          <h4>Info</h4>
+          <p>
+            Player Count: 3-8 players<br />
+            Items:
             <ul>
-              <li>Positive (Green) Cards</li>
-              <li>Negative (Red) Cards</li>
-              <li>Forbidden (Black) Cards</li>
+              <li>Slap Cards</li>
+              <li>Rule Cards</li>
+              <ul>
+                <li>Positive (Green) Cards</li>
+                <li>Negative (Red) Cards</li>
+                <li>Forbidden (Black) Cards</li>
+              </ul>
             </ul>
-          </ul>
-        </p>
-        <h4>Setup</h4>
-        <p>
-          Shuffle the decks of the Slap Cards, Positive, Negative, and Forbidden Cards. Separate the Slap Cards as equally as possible to all players who are playing
-        </p>
-        <h4 id="how-to-play">How to play</h4>
-        <p>
-          Upon starting a brand new game, start by drawing a Forbidden Card and face it upwards for everyone to read. This drawn card should be facing up for the entire game.
-        </p>
-        <p>
-          Each player playing will be responsible for their own stacks when revealing Slap Cards, where they will be revealing their cards onto.
-        </p>
-        <p>
-          To start a new round, reveal 2 Positive Cards and 1 Negative Card and have them face up for everyone to read.
-        </p>
-        <p>
-          After everyone has read the Rule Cards, all players take a Slap Card from their deck but do no reveal it. Hold the cards at the center such that everyone could slap. Countdown by saying "3... 2... 1... GO!" where upon shouting "GO!" all players reveal their cards facing up onto their stack. Once everyone revealed their cards, players can slap any of the cards that was revealed.
-        </p>
-        <p>
-          If the first player slaps any of the cards, they should be rewarded/punished by referring to the Slap Rules table below. If there is a tie, whoever has their hand covering most of the card gets rewarded/punished.
-        </p>
-        <table>
-          <caption>Slap Rules</caption>
-          <tr>
-            <th>Either Positive Cards Satisfied</th>
-            <th>Either Negative/Forbidden Cards Satisfied</th>
-            <th>Outcome</th>
-          </tr>
-          <tr>
-            <td>Yes</td>
-            <td>Yes</td>
-            <td>Lose 2 Cards</td>
-          </tr>
-          <tr>
-            <td>Yes</td>
-            <td>No</td>
-            <td>Win the Card you slapped, and discard the entire stack from the stack you slapped.</td>
-          </tr>
-          <tr>
-            <td>No</td>
-            <td>Yes</td>
-            <td>Lose 2 Cards</td>
-          </tr>
-          <tr>
-            <td>No</td>
-            <td>No</td>
-            <td>Lose 1 Card</td>
-          </tr>
-        </table>
-        <p>
-          Once everyone gets rewarded/punished or no one has slapped, continue revealing cards if your stack is not discarded. If all stacks have been discarded, this means that the round has ended. Discard both Positive Cards and the Negative Card and repeat the round, drawing 2 new Positive and 1 Negative Cards from the draw pile and repeating as before.
-        </p>
-        <h4>Win Condition</h4>
-        <p>
-          If someone has a total of 10 cards they have won, they win. If there's a tie, then proceed the game as normal until one of the tied players wins their next card. 
-        </p>
-      </hgroup>
-    </section>
-    <main>
-      <hgroup>
-        <h3>Obedience is Everything</h3>
-        <p>
-          <i>Rules, Rules, Rules</i> is a rules-based party card game where you must follow the rules or get punished! You
-        </p>
-      </hgroup>
-    </main>
+          </p>
+          <h4>Setup</h4>
+          <p>
+            Shuffle the decks of the Slap Cards, Positive, Negative, and Forbidden Cards. Separate the Slap Cards as equally as possible to all players who are playing
+          </p>
+          <h4 id="how-to-play">How to play</h4>
+          <p>
+            Upon starting a brand new game, start by drawing a Forbidden Card and face it upwards for everyone to read. This drawn card should be facing up for the entire game.
+          </p>
+          <p>
+            Each player playing will be responsible for their own stacks when revealing Slap Cards, where they will be revealing their cards onto.
+          </p>
+          <p>
+            To start a new round, reveal 2 Positive Cards and 1 Negative Card and have them face up for everyone to read.
+          </p>
+          <p>
+            After everyone has read the Rule Cards, all players take a Slap Card from their deck but do no reveal it. Hold the cards at the center such that everyone could slap. Countdown by saying "3... 2... 1... GO!" where upon shouting "GO!" all players reveal their cards facing up onto their stack. Once everyone revealed their cards, players can slap any of the cards that was revealed.
+          </p>
+          <p>
+            If the first player slaps any of the cards, they should be rewarded/punished by referring to the Slap Rules table below. If there is a tie, whoever has their hand covering most of the card gets rewarded/punished.
+          </p>
+          <table>
+            <caption>Slap Rules</caption>
+            <tr>
+              <th>Either Positive Cards Satisfied</th>
+              <th>Either Negative/Forbidden Cards Satisfied</th>
+              <th>Outcome</th>
+            </tr>
+            <tr>
+              <td>Yes</td>
+              <td>Yes</td>
+              <td>Lose 2 Cards</td>
+            </tr>
+            <tr>
+              <td>Yes</td>
+              <td>No</td>
+              <td>Win the Card you slapped, and discard the entire stack from the stack you slapped.</td>
+            </tr>
+            <tr>
+              <td>No</td>
+              <td>Yes</td>
+              <td>Lose 2 Cards</td>
+            </tr>
+            <tr>
+              <td>No</td>
+              <td>No</td>
+              <td>Lose 1 Card</td>
+            </tr>
+          </table>
+          <p>
+            Once everyone gets rewarded/punished or no one has slapped, continue revealing cards if your stack is not discarded. If all stacks have been discarded, this means that the round has ended. Discard both Positive Cards and the Negative Card and repeat the round, drawing 2 new Positive and 1 Negative Cards from the draw pile and repeating as before.
+          </p>
+          <h4>Win Condition</h4>
+          <p>
+            If someone has a total of 10 cards they have won, they win. If there's a tie, then proceed the game as normal until one of the tied players wins their next card.
+          </p>
+        </hgroup>
+      </section>
+      <main>
+        <hgroup>
+          <h3>Obedience is Everything</h3>
+          <p>
+            <i>Rules, Rules, Rules</i> is a rules-based party card game where you must follow the rules or get punished! You
+          </p>
+        </hgroup>
+      </main>
+    </div>
   </div>
 </body>
   
